--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -4,7 +4,7 @@
 		{{^has tag="no-image"}}
 		<a href="{{url}}" rel="bookmark">
 			<div class="entry-media">
-				<img src="{{img_url feature_image}}" alt="{{title}}">
+				<img src="{{img_url feature_image}}" alt="{{title}}" class="fp-post-list-img">
 			</div>
 		</a>
 		{{/has}}
