--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -37,6 +37,7 @@
 					{{#if @member}}	
 						<a id="loginBtn" data-members-signout>Đăng Xuất</a>
 						<div id="user-info" class="user-info">
+							{{@member.email}}
 						</div>
 					{{else}}
 						<a id="loginBtn" class="subscribe-button" href="#subscribe">Đăng Ký</a>
