--- a/post.hbs
+++ b/post.hbs
@@ -78,7 +78,7 @@
 										</a>
 									</div>
 									<div class="article-card__title">
-										<h4>{{title}}</h4>
+										<a href="{{url}}"><h4>{{title}}</h4></a>
 									</div>
 									<div class="article-card__desc">
 										{{excerpt words="13"}}...
