Fixing contact info during payment

--- a/partials/payment.hbs
+++ b/partials/payment.hbs
@@ -79,13 +79,13 @@
                     <table class="payment-info">
                         <tbody>
                             <tr>
-                                <th>Số tài khoản</th><td id="bank_account">0123557686896</td><td><a class="icon is-medium has-text-grey-light tt-copy-btn btn" title="copy" data-clipboard-target="#bank_account"><i class="fas fa-copy tt-clickable"></i></a> </td>
+                                <th>Số tài khoản</th><td id="bank_account">2111000396772</td><td><a class="icon is-medium has-text-grey-light tt-copy-btn btn" title="copy" data-clipboard-target="#bank_account"><i class="fas fa-copy tt-clickable"></i></a> </td>
                             </tr>
                             <tr>
                                 <th>Chủ tài khoản</th><td id="bank_owner_name">Phạm Hà My</td><td><a class="icon is-medium has-text-grey-light tt-copy-btn btn" title="copy" data-clipboard-target="#bank_owner_name"><i class="fas fa-copy tt-clickable"></i></a></td>
                             </tr>
                             <tr>
-                                <th>Ngân hàng</th><td>BIDV</td><td></td>
+                                <th>Ngân hàng</th><td>BIDV, chi nhánh Hà Nội</td><td></td>
                             </tr>
                             <tr>
                                 <th>Số tiền</th><td>{{fee}},000</td><td></td>
@@ -119,7 +119,7 @@
                                     <th>Số tiền</th><td>{{fee}},000</td>
                                 </tr>
                                 <tr>
-                                    <th>Nội dung</th><td>FP {{fp_post_code}}</td>
+                                    <th>Nội dung</th><td>FP {{fp_post_code}} {{@member.email}}</td>
                                 </tr>
                             </tbody>
                         </table>
