enable send mail to confirm

--- a/partials/subscribe-form.hbs
+++ b/partials/subscribe-form.hbs
@@ -7,7 +7,7 @@
         <div class="subscribe-form">
             <h1 class="subscribe-form-title">Hãy gia nhập {{@site.title}}</h1>
             <p class="subscribe-form-description">Cập nhật liên tục những bài viết hay nhất về thị trường chứng khoán</p>
-            <form data-fp-members-form="subscribe">
+            <form data-members-form="subscribe">
                 <div class="form-group">
                     <input class="subscribe-email" data-members-email placeholder="email-của-bạn@vídụ.com" autocomplete="false" />
                     <button class="button primary" style="width: 200px;" type="submit">
@@ -16,7 +16,7 @@
                     </button>
                 </div>
                 <div class="message-success">
-                    <strong>Great!</strong> Chào mừng bạn đến với Finpub, bạn sẽ nhận được email hướng dẫn bắt đầu trong 1 lúc nữa.
+                    <strong>Great!</strong> Chào mừng bạn đến với Finpub, bạn sẽ nhận được email hướng dẫn kích hoạt tài khoản.
                 </div>
                 <div class="message-error">
                     Xin hãy điền email hợp lệ
